Boot 3.1 upgrade (#163)
* #162 : Upgrade maven build to Boot 3.1

* #162 : Replaced deprecated @EnableGlobalMethodSecurity with @EnableMethodSecurity

* #162 : Removed redundant dev profile prop

* #162 : Fixed log4j3 deprecation warns in maven build

"WARN StatusConsoleListener The use of package scanning to locate plugins is deprecated and will be removed in a future release"

See: https://logging.apache.org/log4j/2.x/manual/configuration.html#ConfigurationSyntax

* #162 : Removed banner from test output

* #162 : Fix banner startup in log file

* #162 : Tone down startup logging

* #162 : More startup logging cleanup

* #162 : Update maven-assembly-plugin

* #162 : Replaced deprecated Spring Security config methods

* #162 : Replaced deprecated Base64 encoder in test class

* #162 : Fix Sonar issues + introduce Lombok

* #162 : Replace deprecated JJWT code

* #162 : Use Lombok for logging

* #162 : Use Lombok for logging + Sonar fixes

* #162 : Use JUnit5 assertions where possible

* #162 : Put maven JaCoCo coverage back to 0.8

* #162 : Don't duplicate Sonar report in Gradle CI

* #162 : Upgrade Gradle build to Boot 3.1.x + Lombok

* #162 : Removed JUnit 5 assert from JUnit4 test

* Also removed Sonar token from Gradle CI config.

* #162 : Removed Powermock from REST API module

Becoming a pain for coverage reporting...

* #162 : Upgrade dependencies for maven build

* #162 : Upgrade maven wrapper

* #162 : Upgrade maven wrapper to latest maven 3.9.4

* #162 : Upgrade dependencies for gradle build

* #162 : Upgrade gradle wrapper to 7.6.2

* #162 : Upgrade gradle wrapper to gradle 8.0

* #162 : Upgrade gradle wrapper to gradle 8.0.2

* #162 : Upgrade gradle wrapper to gradle 8.1.1

* #162 : Upgrade gradle wrapper to gradle 8.2.1

* #162 : Upgrade gradle wrapper to gradle 8.3

* #162 : Send Gradle CI build to Sonar too

Makes sense to check the sonar plugin works for Gradle too.

* #162 : F