@@ -33,8 +33,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -45,24 +44,36 @@ import org.springframework.transaction.annotation.Transactional;
  */
 @Repository("marketConfigYamlRepository")
 @Transactional
+@Log4j2
 public class MarketConfigYamlRepository implements MarketConfigRepository {
 
-  private static final Logger LOG = LogManager.getLogger();
   private static final String EXISTING_MARKET_CONFIG = " Existing MarketConfig: ";
+
+  private final ConfigurationManager configurationManager;
+
+  /**
+   * Creates the Market config YAML repo.
+   *
+   * @param configurationManager the config manager.
+   */
+  public MarketConfigYamlRepository(ConfigurationManager configurationManager) {
+    this.configurationManager = configurationManager;
+  }
 
   @Override
   public List<MarketConfig> findAll() {
-    LOG.info(() -> "Fetching all Market configs...");
-    return ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME)
+    log.info("Fetching all Market configs...");
+    return configurationManager
+        .loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME)
         .getMarkets();
   }
 
   @Override
   public MarketConfig findById(String id) {
-    LOG.info(() -> "Fetching Market config for id: " + id);
+    log.info("Fetching Market config for id: " + id);
 
     final MarketsType marketsType =
-        ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
+        configurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
 
     return adaptInternalToExternalConfig(
         marketsType.getMarkets().stream()
@@ -74,33 +85,26 @@ public class MarketConfigYamlRepository implements MarketConfigRepository {
   @Override
   public MarketConfig save(MarketConfig config) {
     final MarketsType marketsType =
-        ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
+        configurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
 
     final List<MarketConfig> marketConfigs =
         marketsType.getMarkets().stream()
             .filter(item -> item.getId().equals(config.getId()))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     if (config.getId() == null || config.getId().isEmpty()) {
-      LOG.info(() -> "About to create MarketConfig: " + config);
+      log.info("About to create MarketConfig: " + config);
 
       if (marketConfigs.isEmpty()) {
         final MarketConfig newMarketConfig = new MarketConfig(config);
         newMarketConfig.setId(generateUuid());
 
         marketsType.getMarkets().add(newMarketConfig);
-        ConfigurationManager.saveConfig(
+        configurationManager.saveConfig(
             MarketsType.class, marketsType, MARKETS_CONFIG_YAML_FILENAME);
 
-        final MarketsType updatedInternalMarketsConfig =
-            ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
-
-        return adaptInternalToExternalConfig(
-            updatedInternalMarketsConfig.getMarkets().stream()
-                .filter(item -> item.getId().equals(newMarketConfig.getId()))
-                .distinct()
-                .collect(Collectors.toList()));
+        return newMarketConfig;
       } else {
         throw new IllegalStateException(
             "Trying to create new MarketConfig but null/empty id already exists. "
@@ -110,17 +114,17 @@ public class MarketConfigYamlRepository implements MarketConfigRepository {
                 + marketsType.getMarkets());
       }
     } else {
-      LOG.info(() -> "About to update MarketConfig: " + config);
+      log.info("About to update MarketConfig: " + config);
 
       if (!marketConfigs.isEmpty()) {
 
         marketsType.getMarkets().remove(marketConfigs.get(0)); // will only be 1 unique strat
         marketsType.getMarkets().add(config);
-        ConfigurationManager.saveConfig(
+        configurationManager.saveConfig(
             MarketsType.class, marketsType, MARKETS_CONFIG_YAML_FILENAME);
 
         final MarketsType updatedMarketsType =
-            ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
+            configurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
 
         return adaptInternalToExternalConfig(
             updatedMarketsType.getMarkets().stream()
@@ -128,12 +132,11 @@ public class MarketConfigYamlRepository implements MarketConfigRepository {
                 .distinct()
                 .collect(Collectors.toList()));
       } else {
-        LOG.warn(
-            () ->
-                "Trying to update MarketConfig but id does not exist MarketConfig: "
-                    + config
-                    + EXISTING_MARKET_CONFIG
-                    + marketsType.getMarkets());
+        log.warn(
+            "Trying to update MarketConfig but id does not exist MarketConfig: "
+                + config
+                + EXISTING_MARKET_CONFIG
+                + marketsType.getMarkets());
         return null;
       }
     }
@@ -141,29 +144,28 @@ public class MarketConfigYamlRepository implements MarketConfigRepository {
 
   @Override
   public MarketConfig delete(String id) {
-    LOG.info(() -> "Deleting Market config for id: " + id);
+    log.info("Deleting Market config for id: " + id);
 
     final MarketsType marketsType =
-        ConfigurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
+        configurationManager.loadConfig(MarketsType.class, MARKETS_CONFIG_YAML_FILENAME);
 
     final List<MarketConfig> marketConfigs =
         marketsType.getMarkets().stream()
             .filter(item -> item.getId().equals(id))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     if (!marketConfigs.isEmpty()) {
       final MarketConfig marketToRemove = marketConfigs.get(0); // will only be 1 unique strat
       marketsType.getMarkets().remove(marketToRemove);
-      ConfigurationManager.saveConfig(MarketsType.class, marketsType, MARKETS_CONFIG_YAML_FILENAME);
+      configurationManager.saveConfig(MarketsType.class, marketsType, MARKETS_CONFIG_YAML_FILENAME);
       return adaptInternalToExternalConfig(Collections.singletonList(marketToRemove));
     } else {
-      LOG.warn(
-          () ->
-              "Trying to delete MarketConfig but id does not exist. MarketConfig id: "
-                  + id
-                  + EXISTING_MARKET_CONFIG
-                  + marketsType.getMarkets());
+      log.warn(
+          "Trying to delete MarketConfig but id does not exist. MarketConfig id: "
+              + id
+              + EXISTING_MARKET_CONFIG
+              + marketsType.getMarkets());
       return null;
     }
   }
